syntax = "proto3";

package examplepb.v1;

option go_package = "github.com/mikalai-mitsin/example/pkg/examplepb/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

message ArchCreate {
  string name = 1;
  string title = 2;
  string subtitle = 3;
  repeated string tags = 4;
  repeated uint32 versions = 5;
  repeated uint64 old_versions = 6;
  google.protobuf.Timestamp release = 7;
  google.protobuf.Timestamp tested = 8;
  string mark = 9;
  string submarine = 10;
  uint64 numb = 11;
}

message ArchGet {
  string id = 1;
}

message ArchUpdate {
  string id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue title = 3;
  google.protobuf.StringValue subtitle = 4;
  google.protobuf.ListValue tags = 5;
  google.protobuf.ListValue versions = 6;
  google.protobuf.ListValue old_versions = 7;
  google.protobuf.Timestamp release = 8;
  google.protobuf.Timestamp tested = 9;
  google.protobuf.StringValue mark = 10;
  google.protobuf.StringValue submarine = 11;
  google.protobuf.UInt64Value numb = 12;
}

message Arch {
  string id = 1;
  google.protobuf.Timestamp updated_at = 2;
  google.protobuf.Timestamp created_at = 3;
  string name = 4;
  string title = 5;
  string subtitle = 6;
  repeated string tags = 7;
  repeated uint32 versions = 8;
  repeated uint64 old_versions = 9;
  google.protobuf.Timestamp release = 10;
  google.protobuf.Timestamp tested = 11;
  string mark = 12;
  string submarine = 13;
  uint64 numb = 14;
}

message ListArch {
  repeated Arch items = 1;
  uint64 count = 2;
}

message ArchDelete {
  string id = 1;
}

message ArchFilter {
  google.protobuf.UInt64Value page_number = 1;
  google.protobuf.UInt64Value page_size = 2;
  repeated string order_by = 3;
  repeated string ids = 4;
  google.protobuf.StringValue search = 5;
}

service ArchService {
  rpc Create(examplepb.v1.ArchCreate) returns (examplepb.v1.Arch) {
    option (google.api.http) = {
      post: "/api/v1/arches"
      body: "*"
    };
  }
  rpc Get(examplepb.v1.ArchGet) returns (examplepb.v1.Arch) {
    option (google.api.http) = {get: "/api/v1/arches/{id}"};
  }
  rpc Update(examplepb.v1.ArchUpdate) returns (examplepb.v1.Arch) {
    option (google.api.http) = {
      patch: "/api/v1/arches/{id}"
      body: "*"
    };
  }
  rpc Delete(examplepb.v1.ArchDelete) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/api/v1/arches/{id}"};
  }
  rpc List(examplepb.v1.ArchFilter) returns (examplepb.v1.ListArch) {
    option (google.api.http) = {get: "/api/v1/arches"};
  }
}